--- a/content/rendeles.html
+++ b/content/rendeles.html
@@ -37,7 +37,7 @@
             alt="Letörölték">
     </a>
 
-    <p><img width="300" src="img/joga.png" alt="Letörölték :'("></p>
+    <p><img width="300" src="/img/joga.png" alt="Letörölték"></p>
 
 </body>
 
