--- a/index.html
+++ b/index.html
@@ -5,34 +5,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Csodás weboldalam</title>
+    <title>CSS gyakorlás</title>
+
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 <body>
-    <ul>
-        <li> <a href="/">Főoldal</a> </li>
-        <li><a href="/content/rendeles.html">Rendelés</a></li>
-        <li><a href="/content/rolunk.html">Rólunk</a></li>
-    </ul>
-    <h1>
-        Legnagyobb.
-    </h1>
-    <h3>
-        Kisebb.
-    </h3>
-    <h6>
-        Legkisebb
-    </h6>
-    <p>
-        Paragráfus
-    </p>
-    <p>
-        <b>Emeljünk ki</b>/<i>tegyünk döntötté</i> valamit a szövegből!
-    </p>
-    <p>
-        b = strong, i = em
-    </p>
-
+    <h1>Oh my goooooood!</h1>
+    <h2>Hmmmm...</h2>
+    <h3 id="valamihosszu">Valami hosszú szöveg</h3>
+    <p> <span class="vastag">Lorem ipsum dolor sit amet,</span> consectetur adipiscing elit. Maecenas eu nulla purus. Cras vel dui eu neque commodo
+        tristique. Sed tortor nisl, maximus ac mi gravida, aliquet elementum odio. Donec quis tincidunt massa. Sed
+        vulputate sed orci dignissim elementum. Sed nec purus in sem luctus gravida at nec mi. Suspendisse mauris mi,
+        iaculis vel ullamcorper ut, lacinia id enim. Etiam quis mollis nibh, in sagittis quam. Nullam interdum tellus
+        nulla, in facilisis libero placerat sed. Aenean maximus augue vel accumsan finibus. Lorem ipsum dolor sit amet,
+        consectetur adipiscing elit. </p>
+    <h3 id="valamimeghosszabb">Valami még hosszabb szöveg</h3>
+    <p> Vestibulum bibendum feugiat risus quis ullamcorper. Sed imperdiet turpis quis bibendum maximus. Integer
+        pulvinar, tellus non maximus cursus, felis est sollicitudin tellus, at posuere mauris augue ut dui. Vivamus
+        vehicula lacinia velit, eu finibus metus luctus ultrices. Duis faucibus nisi sed nunc pharetra, non congue metus
+        ullamcorper. Maecenas ut accumsan mi, sed ultrices risus. Nam urna orci, placerat a dictum a, volutpat vitae
+        leo. Fusce sed justo at metus auctor dictum at sed augue. Etiam non felis est. Maecenas sit amet massa dapibus,
+        pellentesque neque quis, volutpat libero. Maecenas congue elit justo, id volutpat dui ultrices a. Cras at elit
+        maximus, mollis nibh non, elementum felis. Donec tincidunt vel lectus sed hendrerit. Aenean vel elit tristique,
+        accumsan odio ac, lobortis ipsum.</p>
+    <div class="image_div">
+        <img src="img/da_way.jpg" alt="Nem múkodik">
+        <img src="img/roficool.jpg" alt="Nem múködik">
+        <img src="img/da_way.jpg" alt="Nem múkodik">
+        <img src="img/roficool.jpg" alt="Nem múködik">
+    </div>
+    <img src="img/da_way.jpg" alt="Nem múkodik">
+    <img src="img/roficool.jpg" alt="Nem múködik">
+    <img src="img/da_way.jpg" alt="Nem múkodik">
+    <img src="img/roficool.jpg" alt="Nem múködik">
 </body>
 
 </html>
